# UC

./: README.md
Basic_NeuronalNetwork/: .gitignore  README.md  main_numpy.py  main_pure.py  main_torch.py  pyproject.toml
Data-Mining-IIC2433/: README.md
Data-Mining-IIC2433/AgglomerativeClustering/: Tarea3 (1).ipynb  Tarea3.ipynb
Data-Mining-IIC2433/DecissionTree and RandomForest/: README.md  Tarea2.ipynb
Data-Mining-IIC2433/DimentionalReduction_Clustering/: README.md
Data-Mining-IIC2433/Linear and ogistic Regression/: README.md  Tarea1.ipynb
FacebookEyeTracker/: .gitignore  .pre-commit-config.yaml  CITATION.cff  README.md  pipeline.py  pyproject.toml
FacebookEyeTracker/data_example/: .md
FacebookEyeTracker/data_example/nn/: gaze.csv  gaze_clean.csv
FacebookEyeTracker/data_example/nn/times/: diego_p_posts_times.json
FacebookEyeTracker/paper/: main.aux  main.bbl  main.blg  main.out  main.tex  references.bib
FacebookEyeTracker/scripts/: __init__.py  gazeProcess.py  generate.py  match.py  readme.md  screenshot.py  utils.py  visualizations.py
FacebookEyeTracker/scripts/visualizations/: gazeHeatplot.py  scanpathPlot.py
FacebookEyeTracker/single_post_test/: __init__.py  gazeProcess.py  gazeheatplot.py  generate.py  pipeline.py  readme.md  screenshot.py  utils.py
FacebookEyeTracker/single_post_test/gaze/: my_gaze_data_panda.csv  my_gaze_data_panda_clean.csv  my_gaze_data_sebas.csv  my_gaze_data_sebas_clean.csv
FacebookEyeTracker/tools/: __init__.py  batch_process.py  cleanup.py
